--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
-                                                   tools:context=".ui.user.SignInFragment">
+                                                   xmlns:tools="http://schemas.android.com/tools"
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   tools:context=".ui.user.SignUpFragment">
 
     <EditText
             android:layout_width="wrap_content"
@@ -26,10 +26,11 @@
             app:layout_constraintStart_toStartOf="@+id/UserName"
             android:layout_marginTop="41dp" app:layout_constraintTop_toBottomOf="@+id/UserName"/>
     <Button
-            android:text="Sign In"
+            android:text="Sign Up"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/signInButton"
+            android:layout_height="wrap_content" android:id="@+id/signUpButton"
             app:layout_constraintStart_toStartOf="@+id/password"
             android:layout_marginTop="54dp" app:layout_constraintTop_toBottomOf="@+id/password"
             app:layout_constraintEnd_toEndOf="@+id/password"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
