--- a/app/src/main/res/layout/fragment_signin.xml
+++ b/app/src/main/res/layout/fragment_signin.xml
@@ -32,4 +32,29 @@
             app:layout_constraintStart_toStartOf="@+id/password"
             android:layout_marginTop="54dp" app:layout_constraintTop_toBottomOf="@+id/password"
             app:layout_constraintEnd_toEndOf="@+id/password"/>
+
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="254dp"
+            android:layout_height="71dp"
+            android:id="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="68dp" app:layout_constraintTop_toBottomOf="@+id/UserName"
+            android:layout_marginBottom="116dp" app:layout_constraintVertical_bias="0.942">
+        <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16dp"
+                android:text="Already have account?"
+        />
+        <com.google.android.material.button.MaterialButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textButtonSignUp"
+                android:text="Sign Up"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+        />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
