--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent"
                                                    xmlns:tools="http://schemas.android.com/tools"
                                                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   android:layout_width="match_parent"
+                                                   android:layout_height="match_parent"
                                                    tools:context=".ui.user.SignUpFragment">
 
     <EditText
@@ -14,8 +14,9 @@
             android:hint="User Name"
             android:id="@+id/UserName"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="257dp"
-            android:layout_marginStart="82dp"/>
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="236dp"
+            android:layout_marginStart="82dp" android:layout_marginBottom="236dp"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -32,5 +33,29 @@
             app:layout_constraintStart_toStartOf="@+id/password"
             android:layout_marginTop="54dp" app:layout_constraintTop_toBottomOf="@+id/password"
             app:layout_constraintEnd_toEndOf="@+id/password"/>
+
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="254dp"
+            android:layout_height="0dp"
+            android:id="@+id/linearLayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="68dp"
+            app:layout_constraintTop_toBottomOf="@+id/UserName" android:layout_marginBottom="143dp">
+        <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16dp"
+                android:text="Already have account?"
+        />
+        <com.google.android.material.button.MaterialButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textButtonSignIn"
+                android:text="Sign In"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+        />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
