--- a/app/src/main/res/layout/fragment_vocabulary_quiz.xml
+++ b/app/src/main/res/layout/fragment_vocabulary_quiz.xml
@@ -123,7 +123,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:background="@color/design_default_color_primary"
-                android:text="@string/submit"
+                android:text="@string/next"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
