--- a/app/src/main/res/layout/fragment_vocabulary_quiz.xml
+++ b/app/src/main/res/layout/fragment_vocabulary_quiz.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-<<<<<<< Updated upstream
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -13,20 +12,6 @@
             android:orientation="vertical"
             android:padding="16dp">
 
-=======
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".ui.vocabularyquiz.VocabularyQuiz">
-
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:padding="16dp">
-
->>>>>>> Stashed changes
         <TextView
                 android:id="@+id/tv_question"
                 android:layout_width="match_parent"
@@ -137,18 +122,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:background="@color/design_default_color_primary"
-<<<<<<< Updated upstream
-                android:text="@string/next"
-=======
-                android:text="@string/submit"
->>>>>>> Stashed changes
-                android:textColor="@android:color/white"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:background="@color/design_default_color_primary"/>
     </LinearLayout>
-<<<<<<< Updated upstream
-=======
-
->>>>>>> Stashed changes
 </ScrollView>
