--- a/app/src/main/res/layout/fragment_vocabulary_quiz.xml
+++ b/app/src/main/res/layout/fragment_vocabulary_quiz.xml
@@ -119,6 +119,7 @@
 
         <Button
                 android:id="@+id/btn_submit"
+                android:text="@string/next"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
