--- a/app/src/main/res/layout/fragment_learning_vocabulary.xml
+++ b/app/src/main/res/layout/fragment_learning_vocabulary.xml
@@ -51,7 +51,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:indeterminate="false"
-                    android:max="10"
+                    android:max="8"
                     android:minHeight="50dp"
                     android:progress="0" />
 
@@ -63,7 +63,7 @@
                     android:padding="15dp"
                     android:textColorHint="#7A8089"
                     android:textSize="14sp"
-                    tools:text="0/10" />
+                    tools:text="0/8" />
         </LinearLayout>
 
         <TextView
@@ -76,22 +76,21 @@
                 android:padding="15dp"
                 android:textColor="#7A8089"
                 android:textSize="18sp"
-                tools:text="Apple is a delicious fruit" />
+                tools:text="Apple is a delicious fruit" android:textStyle="bold"/>
 
-        <TextView
-                android:id="@+id/tvaudioUrl"
+        <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_play_audio"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/default_option_border_bg"
-                android:gravity="center"
+                android:layout_margin="10dp"
+                android:backgroundTint="@color/design_default_color_primary"
+                android:textColor="@android:color/white"
+                android:icon="@drawable/baseline_play_circle_outline_24"
+                android:iconGravity="textEnd"
+                android:text="@string/play_audio1"
                 android:padding="15dp"
-                android:textColor="#7A8089"
                 android:textSize="18sp"
-                tools:text="appl.url" />
+                android:textStyle="bold" />
 
 
 
