--- a/app/src/main/res/layout/fragment_learning_vocabulary.xml
+++ b/app/src/main/res/layout/fragment_learning_vocabulary.xml
@@ -8,7 +8,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".MainActivity">
 
     <LinearLayout
@@ -86,7 +86,7 @@
                 android:backgroundTint="@color/design_default_color_primary"
                 android:textColor="@android:color/white"
                 android:icon="@drawable/baseline_play_circle_outline_24"
-                android:iconGravity="textEnd"
+                app:iconGravity="textEnd"
                 android:text="@string/play_audio1"
                 android:padding="15dp"
                 android:textSize="18sp"
