--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -25,6 +25,11 @@
                 android:icon="@drawable/ic_menu_slideshow"
                 android:title="@string/grammar_quiz"/>
         <item
+                android:id="@+id/nav_quizVocabRep"
+                android:icon="@drawable/ic_menu_slideshow"
+                android:title="@string/vocabulary_report"/>
+
+        <item
                 android:id="@+id/profile"
                 android:icon="@drawable/ic_account_circle_24px"
                 android:title="@string/profile"/>
