--- a/app/src/main/res/layout/fragment_vocabulary_quiz.xml
+++ b/app/src/main/res/layout/fragment_vocabulary_quiz.xml
@@ -24,8 +24,8 @@
 
         <ImageView
                 android:id="@+id/iv_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
                 android:layout_marginTop="16dp"
                 android:contentDescription="@string/image"
                 tools:src="@drawable/apple" />
