--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,35 +4,25 @@
                                                    xmlns:tools="http://schemas.android.com/tools"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
+                                                   android:layout_margin="@dimen/activity_horizontal_margin"
                                                    tools:context=".ui.user.ProfileFragment">
-    <!-- Username EditText -->
+    <!-- Profile Image -->
 
-    <!-- Password EditText -->
+    <!-- Edit Image Button -->
 
-
-    <!-- Edit Button -->
 
     <!-- Save Button (Initially Invisible) -->
-    <Button
-            android:id="@+id/editButton"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/editImageButton"
+            app:fabSize="mini"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Edit"
-            android:layout_marginTop="43dp"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
-    <Button
-            android:id="@+id/saveButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Save"
-            android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="43dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintTop_toTopOf="@+id/editButton"
-            app:layout_constraintBottom_toBottomOf="@+id/editButton"/>
+            android:layout_gravity="end|bottom"
+            android:src="@drawable/ic_edit_24px"
+            android:contentDescription="@string/submit"
+            app:layout_constraintTop_toTopOf="@+id/profileImageView"
+            app:layout_constraintStart_toStartOf="@+id/profileImageView"
+            android:layout_marginStart="89dp"/>
 
     <LinearLayout
             android:orientation="horizontal"
@@ -40,7 +30,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/linearLayout2"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="103dp" app:layout_constraintEnd_toEndOf="parent">
+            android:layout_marginTop="156dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0">
         <TextView
                 android:text="User Name: "
                 android:layout_weight="0"
@@ -51,7 +42,7 @@
                 android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Username"
+                android:text="User Name"
                 android:enabled="false"/>
     </LinearLayout>
     <LinearLayout
@@ -75,6 +66,53 @@
                 android:inputType="textPassword"
                 android:text="Password"
                 android:enabled="false"/>
+    </LinearLayout>
+    <ImageView
+            android:id="@+id/profileImageView"
+            android:layout_width="120dp"
+            android:layout_height="0dp"
+            android:src="@drawable/ic_account_circle_24px"
+            android:scaleType="centerCrop"
+            android:contentDescription="@string/profile_image"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="20dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout2" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:id="@+id/linearLayout4" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="35dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
+            app:layout_constraintEnd_toEndOf="parent">
+        <Button
+                android:id="@+id/cancel_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cancel"
+                android:layout_marginHorizontal="16dp"
+                android:visibility="gone"/>
+        <Button
+                android:id="@+id/editButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginHorizontal="16dp"
+                android:text="Edit"
+
+        />
+        <Button
+                android:id="@+id/saveButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Save"
+                android:layout_marginHorizontal="16dp"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/editButton"
+                app:layout_constraintBottom_toBottomOf="@+id/editButton"/>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
