--- a/app/src/main/res/layout/fragment_learning_vocabulary.xml
+++ b/app/src/main/res/layout/fragment_learning_vocabulary.xml
@@ -83,8 +83,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:backgroundTint="@color/design_default_color_primary"
-                android:textColor="@android:color/white"
+                android:background="@color/design_default_color_primary"
+                android:textColor="@color/white"
+                android:text="Play Audio"
+                android:textSize="18sp"
+                android:textStyle="bold"
                 android:icon="@drawable/baseline_play_circle_outline_24">
 
         </com.google.android.material.button.MaterialButton>
@@ -100,5 +103,6 @@
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
+
     </LinearLayout>
 </ScrollView>
