--- a/app/src/main/res/layout/fragment_learning_grammar.xml
+++ b/app/src/main/res/layout/fragment_learning_grammar.xml
@@ -124,7 +124,7 @@
 
 
         <Button
-                android:id="@+id/btn_submit"
+                android:id="@+id/btn_next"
                 android:text="@string/next"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
