--- a/app/src/main/res/layout/fragment_learning_vocabulary.xml
+++ b/app/src/main/res/layout/fragment_learning_vocabulary.xml
@@ -30,8 +30,8 @@
 
         <ImageView
                 android:id="@+id/iv_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
                 android:layout_marginTop="16dp"
                 android:contentDescription="@string/image"
                 tools:src="@drawable/apple" />
@@ -51,7 +51,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:indeterminate="false"
-                    android:max="8"
+                    android:max="10"
                     android:minHeight="50dp"
                     android:progress="0" />
 
@@ -63,7 +63,7 @@
                     android:padding="15dp"
                     android:textColorHint="#7A8089"
                     android:textSize="14sp"
-                    tools:text="0/8" />
+                    tools:text="0/10" />
         </LinearLayout>
 
         <TextView
