Video Fragment added

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -81,4 +81,12 @@
             android:label="@string/profile"
             tools:layout="@layout/fragment_profile"/>
 
+    <fragment
+            android:id="@+id/nav_playVideo"
+            android:name="com.example.englishtraining.ui.Playvideo.PlayVideoFragment"
+            android:label="PlayVideo"
+            tools:layout="@layout/fragment_play_video"/>
+
+
+
 </navigation>
