--- a/app/src/main/res/layout/item_quiz_result.xml
+++ b/app/src/main/res/layout/item_quiz_result.xml
@@ -12,24 +12,28 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:textColor="@android:color/white"/>
+            android:textSize="20sp"
+            android:textColor="@color/black"/>
 
     <TextView
             android:id="@+id/totalQuestionsTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/white"/>
+            android:textSize="20sp"
+            android:textColor="@color/black"/>
 
     <TextView
             android:id="@+id/correctAnswersTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/white"/>
+            android:textSize="20sp"
+            android:textColor="@color/black"/>
 
     <TextView
             android:id="@+id/dateOfQuizTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/white"/>
+            android:textSize="20sp"
+            android:textColor="@color/black"/>
 
 </LinearLayout>
