--- a/app/src/main/res/layout/fragment_play_video.xml
+++ b/app/src/main/res/layout/fragment_play_video.xml
@@ -25,8 +25,8 @@
             app:layout_constraintVertical_bias="0.072"/>
     <VideoView
             android:id="@+id/lesson1VideoView"
-            android:layout_width="370dp"
-            android:layout_height="373dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="10dp"
