video pic added

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -134,13 +134,13 @@
                 <ImageView
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:src="@drawable/ic_award" />
+                        android:src="@drawable/videoplayer" />
 
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:text="Awards"
+                        android:text="@string/videos"
                         android:textSize="16sp"
                         android:textColor="@android:color/white" />
             </LinearLayout>
