--- a/app/src/main/res/layout/item_quiz_result.xml
+++ b/app/src/main/res/layout/item_quiz_result.xml
@@ -5,7 +5,7 @@
               android:orientation="vertical"
               android:padding="8dp"
               android:layout_marginBottom="8dp"
-              android:background="@android:color/darker_gray">
+              android:background="#BDE4F6">
 
     <TextView
             android:id="@+id/quizTypeTextView"
