--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -114,5 +114,20 @@
                 app:layout_constraintBottom_toBottomOf="@+id/editButton"/>
 
     </LinearLayout>
+    <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
+                  android:gravity="center" android:id="@+id/linearLayout5" app:layout_constraintStart_toStartOf="parent"
+                  android:layout_marginTop="31dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
+                  app:layout_constraintEnd_toEndOf="parent">
+        <com.google.android.material.button.MaterialButton
+                android:id="@+id/deleteAccountButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Delete Account"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:textColor="@android:color/holo_red_dark"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:layout_editor_absoluteY="379dp" app:layout_constraintHorizontal_bias="0.541"/>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
